Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -22,9 +22,8 @@
         "#@title 1.WebUIのインストール\n",
         "\n",
         "%cd /content\n",
-        "import os\n",
-        "from google.colab.output import eval_js\n",
-        "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "\n",
+        "%env TF_CPP_MIN_LOG_LEVEL=1\n",
         "\n",
         "!apt -y update -qq\n",
         "!wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
@@ -206,7 +205,7 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"Anything-V3.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"anything-v4.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -410,20 +409,28 @@
         "Lora_url = Lora_dict.get(Lora_name)\n",
         "Textual_url = Textual_dict.get(Textual_name)\n",
         "Lycoris_url = Lycoris_dict.get(Lycoris_name)\n",
+        "import os\n",
         "\n",
-        "def install(Lora_url, Textual_url,Lycoris_url):\n",
+        "def install(Lora_url, Textual_url, Lycoris_url):\n",
         "\n",
-        "    if Lora_url :\n",
+        "    if Lora_url:\n",
         "        base_name1 = os.path.basename(Lora_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lora_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name1} {Lora_url}     \n",
-        "    if Textual_url :\n",
+        "        if Lora_url.startswith(\"https://huggingface.co/\"):\n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name1} {Lora_url}  \n",
+        "        else:\n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora {Lora_url}  \n",
+        "    if Textual_url:\n",
         "        base_name2 = os.path.basename(Textual_url)\n",
         "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Textual_url} -d /content/stable-diffusion-webui/embeddings {Textual_url}\n",
-        "    if Lycoris_url :\n",
+        "    if Lycoris_url:\n",
         "        base_name3 = os.path.basename(Lycoris_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lycoris_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name3} {Lycoris_url}\n",
         "\n",
-        "install(Lora_url, Textual_url,Lycoris_url)"
+        "        if Lycoris_url.startswith(\"https://huggingface.co/\"):\n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name3} {Lycoris_url}  \n",
+        "        else:\n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora {(Lycoris_url}  \n",
+        "\n",
+        "install(Lora_url, Textual_url, Lycoris_url)\n"
       ],
       "metadata": {
         "id": "QDG0oyNU6R1L",
