Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -217,7 +217,7 @@
       "source": [
         "#@title カスタムモデル(任意)\n",
         " #@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\",\"VAE\"] {allow-input: false}\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\",\"VAE\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
@@ -228,6 +228,8 @@
         "elif model_type ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"LoRA\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
+        "elif model_type == \"LoRA(additional-networks)\"\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
