Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -36,11 +36,11 @@
         "!rm *.deb\n",
         "\n",
         "!apt -y install -qq aria2\n",
-        "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
-        "!pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
+        "!pip install -q torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1 torchtext==0.14.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu116 -U\n",
+        "!pip install -q xformers==0.0.16 triton==2.0.0 -U\n",
         "\n",
         "#WebUIのインストール\n",
-        "!git clone -b v2.2 https://github.com/camenduru/stable-diffusion-webui\n",
+        "!git clone -b v2.1 https://github.com/camenduru/stable-diffusion-webui\n",
         "\n",
         "#Extensions1 絶対入れておくべき\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
@@ -253,6 +253,7 @@
         "elif model_type ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"LoRA\":\n",
+        "    !mkdir /content/stable-diffusion-webui/models/Lora\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LoRA(additional-networks)\"\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
