--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -22,9 +22,8 @@
         "#@title 1.WebUIのインストール\n",
         "\n",
         "#パッケージインストール\n",
-        "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117\n",
-        "!pip install -q --pre triton\n",
-        "\n",
+        "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+        "!pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.2 https://github.com/camenduru/stable-diffusion-webui\n",
         "#Extensions1 絶対入れておくべき\n",
@@ -228,6 +227,7 @@
         "elif model_type ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "elif model_type == \"LoRA\":\n",
+        "    !mkdir /content/stable-diffusion-webui/models/Lora\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LoRA(additional-networks)\"\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
