Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -255,7 +255,7 @@
         "elif model_type == \"LoRA\":\n",
         "    !mkdir /content/stable-diffusion-webui/models/Lora\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "elif model_type == \"LoRA(additional-networks)\"\n",
+        "elif model_type == \"LoRA(additional-networks)\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
