Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -132,7 +132,7 @@
         "    \"Defmix-v1.1\":\"https://huggingface.co/Defpoint/Defmix-v1.0/resolve/main/Defmix-v1.1.safetensors\",\n",
         "    \"RDtMix\":\"https://huggingface.co/Hemlok/DateMix/resolve/main/RDtMix-fp16.safetensors\",\n",
         "    \"meadmix\":\"https://huggingface.co/sazanka-imoto/MeadMix/resolve/main/meadmix.safetensors\",\n",
-        "    \"Nabylon-v1.0\":\"https://huggingface.co/NegiInNattoMaki/Nabylon-v1.0/resolve/main/Nabylon-v1.0-fp16.safetensors\",\n",
+        "    \"Nabylon-v1.0\":\"https://huggingface.co/NegiInNattoMaki/Nabylon/resolve/main/Nabylon-v1.0-fp16.safetensors\",\n",
         "    \"LonganMix\":\"https://huggingface.co/Hemlok/LonganMix/resolve/main/LonganMix-fp16.ckpt\",\n",
         "    \"Corneo_7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
         "    \"Corneo_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
@@ -229,7 +229,7 @@
         "elif model_type == \"LoRA\":\n",
         "    !mkdir /content/stable-diffusion-webui/models/Lora\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "elif model_type == \"LoRA(additional-networks)\"\n",
+        "elif model_type == \"LoRA(additional-networks)\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
@@ -382,6 +382,7 @@
       "cell_type": "code",
       "source": [
         "#@title  4.WebUIの起動\n",
+        "%cd /content/stable-diffusion-webui\n",
         "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
         "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
         "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae "
