--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -35,11 +35,10 @@
         "#GPUの確認\n",
         "!nvidia-smi\n",
         "#パッケージインストール\n",
-        "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117\n",
-        "!pip install -q --pre triton\n",
-        "\n",
+        "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+        "!pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "#WebUIのインストール\n",
-        "!git clone -b v2.2 https://github.com/camenduru/stable-diffusion-webui\n",
+        "!git clone -b v2.1 https://github.com/camenduru/stable-diffusion-webui\n",
         "#Extensions1 絶対入れておくべき\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
@@ -168,6 +167,7 @@
         "\n",
         "install(model_url, vae_url)\n",
         "\n",
+        "%cd /content/stable-diffusion-webui\n",
         "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
         "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae "
       ]
