Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -22,9 +22,8 @@
         "#@title 1.WebUIのインストール\n",
         "\n",
         "%cd /content\n",
-        "import os\n",
-        "from google.colab.output import eval_js\n",
-        "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "\n",
+        "%env TF_CPP_MIN_LOG_LEVEL=1\n",
         "\n",
         "!apt -y update -qq\n",
         "!wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
@@ -409,6 +408,36 @@
       ],
       "metadata": {
         "id": "ywV9LPuWCEok",
+        "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Ngrok(準備中)\n",
+        "# @markdown Get token from [here](https://dashboard.ngrok.com/get-started/your-authtoken)\n",
+        "\n",
+        "ngrok_auth_token = \"\"  # @param {type: \"string\"}\n",
+        "ngrok_region = \"jp\"  # @param [\"default\", \"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
+        "\n",
+        "if os.path.exists(f\"{data_dir}/ngrok.txt\") :\n",
+        "    with open(f\"{data_dir}/ngrok.txt\", mode=\"r\") as f:\n",
+        "        lines = f.readlines()\n",
+        "        if not ngrok_auth_token and len(lines) > 0:\n",
+        "            ngrok_auth_token = lines[0].strip()\n",
+        "        if ngrok_region == \"default\" and len(lines) > 1:\n",
+        "            ngrok_region = lines[1].strip()\n",
+        "\n",
+        "with open(f\"{data_dir}/ngrok.txt\", mode=\"w\") as f:\n",
+        "    f.write(f\"{ngrok_auth_token}\\n{ngrok_region}\")\n",
+        "\n",
+        "if not ngrok_region or ngrok_region == \"default\":\n",
+        "    ngrok_region = \"us\""
+      ],
+      "metadata": {
+        "id": "Y7XJPo6wLc_B",
         "cellView": "form"
       },
       "execution_count": null,
