Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -20,7 +20,14 @@
       "outputs": [],
       "source": [
         "#@title 1.WebUIのインストール\n",
+        "Mount_Drive = True # @param {type: \"boolean\"}\n",
         "\n",
+        "if Mount_Drive:\n",
+        "    import os\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
+        "        \n",
         "%cd /content\n",
         "\n",
         "%env TF_CPP_MIN_LOG_LEVEL=1\n",
@@ -114,7 +121,7 @@
         "    #関西弁化　\n",
         "   #data = {\"localization\": \"ks_JP\"}\n",
         "    with open(\"config.json\", \"w\") as f:\n",
-        "        json.dump(data, f)"
+        "        json.dump(data, f)\n"
       ]
     },
     {
@@ -130,7 +137,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name = \"BloodOrangeMix\"  #@param [\"7th_anime_v1\",\"7th_anime_v2\",\"7th_anime_v3\",\"7th_test\",\"7th_JP_test\",\"7thHeaven_Izumi_abyssdiff\",\"AbyssOrangeMix\",\"AbyssOrangeMix2\",\"AbyssOrangeMix3\",\"ACertainModel\",\"BloodOrangeMix\",\"ACertainThing\",\"Aikimi_dC3\",\"Aikimi_dC4\",\"Aikimi_diffusion_base_wd-1-5_beta2\",\"Almond_mix\",\"ambientmix\",\"anime-pencil-diffusion\",\"anysium_anypas\",\"Anything V5\",\"anything-v3.0\",\"anything-v4.0\",\"AnythingV-4.5\",\"ariamix\",\"Baka-Diffusion\",\"BalorMix-V4\",\"Balor-V2\",\"basil_mix\",\"BloodOrangeMix\",\"blue_pencil\",\"blue_pencil V-5\",\"blue_pencil_V4\",\"blue_pencil-v3\",\"Burger-Mix\",\"carrot-commercial-v1\",\"ChilloutMix\",\"CiderMix\",\"cinnamon_mix\",\"cool-japan-diffusion\",\"cornflowerStylizedAnime_v8\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"counterfeit-V2.5 2.5d tweak\",\"Crowbox-Vol.1\",\"DateMix\",\"Defacta-2th\",\"Defmix-v1.0\",\"Defmix-v2.0\",\"Deyoyoyo\",\"dreamlike-anime-1.0\",\"EerieOrangeMix\",\"EerieOrangeMix2\",\"ElyOrangeMix\",\"EmiPhaV\",\"endlessMix\",\"flex-diffusion-2-1\",\"GestaltMix-v1.0\",\"Graham_Special\",\"graupel-v1\",\"GuchaGucha_Shiki\",\"GyoZanMix\",\"HighRiseMixV1\",\"HighRiseMixV2\",\"HimawariMix-v1.0\",\"HimawariMix-v1.10\",\"HimawariMix-V2\",\"HonyararaMix\",\"Illuminati Diffusion v1.1\",\"JewelDefactaPastel\",\"LimeMix\",\"LiveArcaMix\",\"MagicalMix_v1\",\"MagicalMix_v2\",\"MeadMix\",\"MISA\",\"mitsua-diffusion-one\",\"MORIMORImix\",\"Nabylon\",\"NO133_104\",\"openjourney\",\"OsukiniMix\",\"pastel-mix\",\"RainierMix\",\"phantom-diffusion\",\"picasso-diffusion-1-1\",\"Plat Diffusion\",\"pvc-v3\",\"quattro-4merge-plus-i\",\"QuinceMix\",\"RacyMixV1\",\"Rainier-base\",\"RainierMix\",\"RainierMixV1\",\"RainierMixV2\",\"RainMix\",\"RDtMix\",\"Realistic Vision V2.0\",\"RefSlave-V1\",\"Replicant-V1.0\",\"Riga_Collection-v1\",\"RuminationDiffusion\",\"SakuraMix-V2\",\"Salt_mix\",\"SD2boy\",\"SD2boy_girl\",\"SD-Silicon28\",\"SD-Silicon29\",\"SEmix\",\"ShuimohuaAnime\",\"MORIMORImix\",\"SnowMix\",\"SSSSLLDDLL\",\"subtly\",\"SukiAni-mix\",\"SukiyakiMix-v1.0\",\"untitled-replicant\",\"wd-1-5-beta2-extra\",\"wd-1-5-beta2\",\"whitelady-V2\",\"Wonton ColorBox Enhanced\",\"X-mix\",\"xtracolor.v11\",\"YuzuGinger\",\"YuzuLemonChaiLatte\",\"YuzuLemonMilk\"] {allow-input: false}\n",
+        "model_name = \"SukiAni-mix\"  #@param [\"7th_anime_v1\",\"7th_anime_v2\",\"7th_anime_v3\",\"7th_test\",\"7th_JP_test\",\"7thHeaven_Izumi_abyssdiff\",\"AbyssOrangeMix\",\"AbyssOrangeMix2\",\"AbyssOrangeMix3\",\"ACertainModel\",\"BloodOrangeMix\",\"ACertainThing\",\"Aikimi_dC3\",\"Aikimi_dC4\",\"Aikimi_diffusion_base_wd-1-5_beta2\",\"Almond_mix\",\"ambientmix\",\"anime-pencil-diffusion\",\"anysium_anypas\",\"Anything V5\",\"anything-v3.0\",\"anything-v4.0\",\"AnythingV-4.5\",\"ariamix\",\"Baka-Diffusion\",\"BalorMix-V4\",\"Balor-V2\",\"basil_mix\",\"BloodOrangeMix\",\"blue_pencil\",\"blue_pencil V-5\",\"blue_pencil_V4\",\"blue_pencil-v3\",\"Burger-Mix\",\"carrot-commercial-v1\",\"ChilloutMix\",\"CiderMix\",\"cinnamon_mix\",\"cool-japan-diffusion\",\"cornflowerStylizedAnime_v8\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"counterfeit-V2.5 2.5d tweak\",\"Crowbox-Vol.1\",\"DateMix\",\"Defacta-2th\",\"Defmix-v1.0\",\"Defmix-v2.0\",\"Deyoyoyo\",\"dreamlike-anime-1.0\",\"EerieOrangeMix\",\"EerieOrangeMix2\",\"ElyOrangeMix\",\"EmiPhaV\",\"endlessMix\",\"flex-diffusion-2-1\",\"GestaltMix-v1.0\",\"Graham_Special\",\"graupel-v1\",\"GuchaGucha_Shiki\",\"GyoZanMix\",\"HighRiseMixV1\",\"HighRiseMixV2\",\"HimawariMix-v1.0\",\"HimawariMix-v1.10\",\"HimawariMix-V2\",\"HonyararaMix\",\"Illuminati Diffusion v1.1\",\"JewelDefactaPastel\",\"LimeMix\",\"LiveArcaMix\",\"MagicalMix_v1\",\"MagicalMix_v2\",\"MeadMix\",\"MISA\",\"mitsua-diffusion-one\",\"MORIMORImix\",\"Nabylon\",\"NO133_104\",\"openjourney\",\"OsukiniMix\",\"pastel-mix\",\"RainierMix\",\"phantom-diffusion\",\"picasso-diffusion-1-1\",\"Plat Diffusion\",\"pvc-v3\",\"quattro-4merge-plus-i\",\"QuinceMix\",\"RacyMixV1\",\"Rainier-base\",\"RainierMix\",\"RainierMixV1\",\"RainierMixV2\",\"RainMix\",\"RDtMix\",\"Realistic Vision V2.0\",\"RefSlave-V1\",\"Replicant-V1.0\",\"Riga_Collection-v1\",\"RuminationDiffusion\",\"SakuraMix-V2\",\"Salt_mix\",\"SD2boy\",\"SD2boy_girl\",\"SD-Silicon28\",\"SD-Silicon29\",\"SEmix\",\"ShuimohuaAnime\",\"MORIMORImix\",\"SnowMix\",\"SSSSLLDDLL\",\"subtly\",\"SukiAni-mix\",\"SukiyakiMix-v1.0\",\"untitled-replicant\",\"wd-1-5-beta2-extra\",\"wd-1-5-beta2\",\"whitelady-V2\",\"Wonton ColorBox Enhanced\",\"X-mix\",\"xtracolor.v11\",\"YuzuGinger\",\"YuzuLemonChaiLatte\",\"YuzuLemonMilk\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"7th_anime_v1\":[\"https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v1/7th_anime_v1.1.safetensors\"],\n",
@@ -355,14 +362,6 @@
       "source": [
         "#@title ドライブをマウント\n",
         "\n",
-        "Mount_Drive = True # @param {type: \"boolean\"}\n",
-        "\n",
-        "if Mount_Drive:\n",
-        "    import os\n",
-        "    from google.colab import drive\n",
-        "    if not os.path.exists(\"/content/drive\"):\n",
-        "        drive.mount(\"/content/drive\")\n",
-        "\n",
         "model_type_1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
         "if model_type_1 == \"Checkpoint\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -448,7 +447,7 @@
       "source": [
         "#@title カスタムモデル\n",
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
-        "model_type_2 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
+        "model_type_2 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
         "if model_type_2 == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type_2 == \"Hypernetwork\":\n",
@@ -456,7 +455,10 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\"\n",
         "elif model_type_2 ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
-        "elif model_type_2 == \"LoRA\":\n",
+        "elif model_type == \"LoRA\":\n",
+        "    !mkdir /content/stable-diffusion-webui/models/Lora\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/models/Lora\"\n",
+        "elif model_type_2 == \"LoRA(additional-networks)\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type_2 == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
@@ -467,9 +469,8 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
         "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
-        "\n",
         "elif modelUrl == \"\":\n",
-        "  print(\"スキップ\")\n",
+        "  print(\"\")\n",
         "  \n",
         "else:\n",
         "    def install(url):\n",
