Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -21,6 +21,14 @@
       "source": [
         "#@title 1.WebUIのインストール\n",
         "\n",
+        "#ドライブをマウント\n",
+        "Mount_Drive = False # @param {type: \"boolean\"}\n",
+        "\n",
+        "if Mount_Drive:\n",
+        "    import os\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
         "%cd /content\n",
         "\n",
         "%env TF_CPP_MIN_LOG_LEVEL=1\n",
@@ -104,16 +112,7 @@
         "  !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/t2iadapter_canny_sd14v1.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o t2iadapter_canny_sd14v1.pth\n",
         "\n",
         "#EasyNegative\n",
-        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
-        "\n",
-        "#ドライブをマウント\n",
-        "Mount_Drive = False # @param {type: \"boolean\"}\n",
-        "\n",
-        "if Mount_Drive:\n",
-        "    import os\n",
-        "    from google.colab import drive\n",
-        "    if not os.path.exists(\"/content/drive\"):\n",
-        "        drive.mount(\"/content/drive\")"
+        "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n"
       ]
     },
     {
@@ -129,7 +128,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"AniReality-Mix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
+        "model_name =\"anything-v3.0\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -205,7 +204,7 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"anything-v4.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"kl-f8-anime\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -471,8 +470,61 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
-        "<br>\n",
+        "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>"
+      ],
+      "metadata": {
+        "id": "x54Lv69ieDvt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title　生成した画像フォルダのアップロード/ダウンロード(任意)\n",
+        "import os\n",
+        "\n",
+        "upload_download = \"Drive_Upload\"  # @param [\"Drive_Upload\", \"Download\", \"Drive_Upload and Download\"]\n",
+        "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
+        "folder_name = \"generated_images\" # @param {'type': 'string'}\n",
+        "\n",
+        "if upload_download == \"Drive_Upload\":\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
+        "    if folder_type == \"zip\":\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/{folder_name}\"\n",
+        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive/\"\n",
+        "    elif folder_type == \"raw\":\n",
+        "        !cp -r \"/content/{folder_name}\" \"/content/drive/MyDrive/\"\n",
+        "\n",
+        "elif upload_download == \"Download\":\n",
+        "    from google.colab import files\n",
+        "    if folder_type == \"zip\":\n",
+        "        files.download(f\"/content/{folder_name}.zip\")\n",
+        "    elif folder_type == \"raw\":\n",
+        "        files.download(f\"/content/{folder_name}\")\n",
+        "\n",
+        "elif upload_download == \"Upload and Download\":\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
+        "    from google.colab import files\n",
+        "    if folder_type == \"zip\":\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/{folder_name}\"\n",
+        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive/\"\n",
+        "        files.download(f\"/content/{folder_name}.zip\")\n",
+        "    elif folder_type == \"raw\":\n",
+        "        files.download(f\"/content/{folder_name}\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "NHf0j9NxcjEx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
