Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -482,38 +482,41 @@
         "#@title　生成した画像フォルダのアップロード/ダウンロード(任意)\n",
         "import os\n",
         "\n",
-        "upload_download = \"Drive_Upload\"  # @param [\"Drive_Upload\", \"Download\", \"Drive_Upload and Download\"]\n",
-        "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
-        "folder_name = \"generated_images\" # @param {'type': 'string'}\n",
+        "upload_download = \"Upload_drive\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
+        "folder_type = \"raw\" #@param [\"raw\",\"zip\"] \n",
+        "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
         "\n",
-        "if upload_download == \"Drive_Upload\":\n",
+        "if upload_download == \"Upload_drive\":\n",
         "    from google.colab import drive\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")\n",
         "    if folder_type == \"zip\":\n",
-        "        !zip -r \"/content/{folder_name}.zip\" \"/content/{folder_name}\"\n",
-        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive/\"\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs\"\n",
+        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive.zip\"\n",
         "    elif folder_type == \"raw\":\n",
-        "        !cp -r \"/content/{folder_name}\" \"/content/drive/MyDrive/\"\n",
+        "        !cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive/{folder_name}\"\n",
         "\n",
         "elif upload_download == \"Download\":\n",
         "    from google.colab import files\n",
         "    if folder_type == \"zip\":\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs/txt2img-images/\"\n",
         "        files.download(f\"/content/{folder_name}.zip\")\n",
         "    elif folder_type == \"raw\":\n",
-        "        files.download(f\"/content/{folder_name}\")\n",
+        "        print(\"フォルダはzipファイルではないため、ダウンロードできません。\")\n",
         "\n",
-        "elif upload_download == \"Upload and Download\":\n",
+        "elif upload_download == \"Upload_zip_drive and Download_zip\":\n",
         "    from google.colab import drive\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")\n",
         "    from google.colab import files\n",
         "    if folder_type == \"zip\":\n",
-        "        !zip -r \"/content/{folder_name}.zip\" \"/content/{folder_name}\"\n",
-        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive/\"\n",
         "        files.download(f\"/content/{folder_name}.zip\")\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs\"\n",
+        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive.zip\"\n",
+        "\n",
         "    elif folder_type == \"raw\":\n",
-        "        files.download(f\"/content/{folder_name}\")\n"
+        "        files.download(f\"/content/{folder_name}\")\n",
+        "        !cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive/{folder_name}\"\n"
       ],
       "metadata": {
         "cellView": "form",
