Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -20,7 +20,7 @@
       "outputs": [],
       "source": [
         "#@title 1.WebUIのインストール\n",
-        "Mount_Drive = True # @param {type: \"boolean\"}\n",
+        "Mount_Drive = False # @param {type: \"boolean\"}\n",
         "\n",
         "if Mount_Drive:\n",
         "    import os\n",
@@ -548,8 +548,64 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**生成した画像の利用については自己判断および自己責任でお願いします。**"
+      ],
+      "metadata": {
+        "id": "66EUIaiSJuJJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title　生成した画像フォルダのアップロード/zipファイルダウンロード(任意)\n",
+        "import os\n",
         "\n",
-        "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
+        "upload_download = \"Upload_zip_drive and Download_zip\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
+        "folder_type = \"raw\" #@param [\"raw\",\"zip\"] \n",
+        "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
+        "\n",
+        "if upload_download == \"Upload_drive\":\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
+        "    if folder_type == \"zip\":\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs\"\n",
+        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive.zip\"\n",
+        "    elif folder_type == \"raw\":\n",
+        "        !cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive/{folder_name}\"\n",
+        "\n",
+        "elif upload_download == \"Download\":\n",
+        "    from google.colab import files\n",
+        "    if folder_type == \"zip\":\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs/txt2img-images/\"\n",
+        "        files.download(f\"/content/{folder_name}.zip\")\n",
+        "    elif folder_type == \"raw\":\n",
+        "        print(\"フォルダはzipファイルではないため、ダウンロードできません。\")\n",
+        "\n",
+        "elif upload_download == \"Upload_zip_drive and Download_zip\":\n",
+        "    from google.colab import drive\n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        drive.mount(\"/content/drive\")\n",
+        "    from google.colab import files\n",
+        "    if folder_type == \"zip\":\n",
+        "        files.download(f\"/content/{folder_name}.zip\")\n",
+        "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs\"\n",
+        "        !cp -r \"/content/{folder_name}.zip\" \"/content/drive/MyDrive.zip\"\n",
+        "\n",
+        "    elif folder_type == \"raw\":\n",
+        "        files.download(f\"/content/{folder_name}\")\n",
+        "        !cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive/{folder_name}\"\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "H_SCFn6RJvv9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 備考\n",
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
