Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -479,11 +479,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title　生成した画像フォルダのアップロード/ダウンロード(任意)\n",
+        "#@title　生成した画像フォルダのアップロード/zipファイルダウンロード(任意)\n",
         "import os\n",
         "\n",
         "upload_download = \"Upload_drive\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
-        "folder_type = \"raw\" #@param [\"raw\",\"zip\"] \n",
+        "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
         "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
         "\n",
         "if upload_download == \"Upload_drive\":\n",
