Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -574,7 +574,7 @@
         "    elif folder_type == \"raw\":\n",
         "        !cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive/{folder_name}\"\n",
         "\n",
-        "elif upload_download == \"Download\":\n",
+        "elif upload_download == \"Download_zip\":\n",
         "    from google.colab import files\n",
         "    if folder_type == \"zip\":\n",
         "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs/txt2img-images/\"\n",
