Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -242,7 +242,8 @@
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         " \n",
         "if modelUrl == \"\":\n",
-        "  print(\"\")\n",
+        "  print(\"modelUrlに値が指定されていないため、スキップされます。\")\n",
+        "\n",
         "else:\n",
         "  def install(url):\n",
         "      base_name = os.path.basename(url)\n",
